fixed the iframe gap. It's the little things that matter (to me).

--- a/neocities/phonePages/css/phoneGlobals.css
+++ b/neocities/phonePages/css/phoneGlobals.css
@@ -3,8 +3,13 @@ body{
 }
 
 #detailBarIFrame{
+    display: block; 
+
     width: 100%;
     height: 20px;
+
+    margin: 0;
+    padding: 0;
 }
 
 .detailBar {
